# orchestrateur

./: .gitignore  ARCHIVE_PHASE1.md  ARCHIVE_PHASE2_v0.1.0.md  ARCHIVE_PHASE3_v0.1.0.md  Cargo.toml  PROMPT_MAITRE.md  PROMPT_VEILLE.md  README.md  commit-msg.txt  install.ps1  install.sh  justfile  uninstall.ps1
apps/tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-desktop/src-tauri/capabilities/: default.json
apps/tauri-desktop/src-tauri/src/: harness_commands.rs  lib.rs  main.rs  territory_launcher.rs
crates/b212/: Cargo.toml
crates/b212/src/: error.rs  lib.rs  version.rs
crates/b212/src/execution/: mod.rs  sim_executor.rs
crates/b212/src/journal/: mod.rs
crates/b212/src/modules/: b12_orderflow.rs  b1_5_regime.rs  b1_macro.rs  b2_5_timeframes.rs  b2_structure.rs  common.rs  context.rs  mod.rs
crates/b212/src/ports/: journal.rs  market_data.rs  mod.rs  proposal_store.rs  sim_store.rs
crates/b212/src/proposal/: builder.rs  hitl.rs  mod.rs
crates/b212/src/rules/: cardinal.rs  mod.rs
crates/b212/src/scoring/: alignment_score.rs  context.rs  helpers.rs  mod.rs  quick_check.rs  trade_location_score.rs
crates/b212/src/signals/: acceptance_expansion.rs  cascade_trigger.rs  context.rs  false_migration.rs  helpers.rs  impulse_trigger.rs  leverage_trap.rs  mod.rs  value_migration.rs
crates/b212/src/types/: cardinal.rs  journal.rs  lineage.rs  market.rs  mod.rs  module_output.rs  proposal.rs  score.rs  setup.rs  signal.rs  sim.rs
crates/b212/tests/: cardinal_rules_fixtures.rs  fixture_roundtrip.rs  modules_fixtures.rs  proposal_hitl.rs  scoring_fixtures.rs  signals_fixtures.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  context.rs  dispatch.rs  harness_ops.rs  main.rs  output.rs  present.rs  update.rs  windows_ops.rs
crates/cli/src/commands/: agent.rs  agent_display.rs  agent_interactive.rs  b212.rs  backup.rs  config.rs  daemon.rs  doctor.rs  health.rs  memory.rs  mod.rs  onboard.rs  session.rs  skill.rs  uninstall.rs  update.rs
crates/cli/src/tui/: actions.rs  bootstrap.rs  channels.rs  menus.rs  mod.rs  onboard.rs  progress.rs  theme.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  lib.rs  response.rs
crates/cortex/: Cargo.toml
crates/cortex/src/: lib.rs
crates/cortex/src/domain/: backlink.rs  error.rs  events.rs  knowledge_graph.rs  memory.rs  memory_draft.rs  memory_id.rs  memory_kind.rs  mod.rs  session.rs  tag.rs
crates/cortex/src/ports/: agent_ports.rs  embedding_provider.rs  memory_repository.rs  mod.rs  session_repository.rs  vector_store.rs
crates/cortex/src/services/: backlink_calculator.rs  markdown_parser.rs  memory_draft_validator.rs  mod.rs
crates/cortex/tests/: adversarial_validation.rs  heavy_adversarial.rs  property.proptest-regressions  property.rs  scalability.rs
crates/hud/: Cargo.toml
crates/hud/src/: app.rs  icon.rs  list.rs  main.rs  metrics.rs  prefs.rs  search_list.rs  state.rs  theme.rs
crates/hud/src/views/: audit_view.rs  chat_view.rs  graph_view.rs  health_banner.rs  mod.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: bootstrap.rs  draft_repository.rs  http_retry.rs  http_status.rs  lib.rs  memory_repository.rs  session_store.rs  wiring.rs
crates/infrastructure/src/b212/: file_journal.rs  file_proposal_store.rs  file_sim_store.rs  fixture_market_data.rs  mod.rs
crates/infrastructure/src/embedding/: cache.rs  chain.rs  factory.rs  mod.rs  ollama_provider.rs  openai_embeddings.rs
crates/infrastructure/src/llm/: anthropic.rs  chain.rs  factory.rs  mod.rs  ollama_llm.rs  openai_compatible.rs  xai_grok.rs
crates/infrastructure/src/providers/: mod.rs  resolve.rs  unavailable.rs
crates/infrastructure/src/vector_store/: factory.rs  lancedb_store.rs  mod.rs
crates/infrastructure/tests/: b212_fixtures.rs  b212_governance.rs  b212_sim_executor.rs  hardcore_perf.rs  integration_wiring.rs  session_store.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  error.rs  lib.rs  manager.rs  server.rs
crates/mcp/tests/: manager_disabled.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/src/: lib.rs
crates/orchestrator/src/: config.rs  deps.rs  error.rs  events.rs  facade.rs  health.rs  lib.rs  logging.rs  memory_draft.rs
crates/orchestrator/src/agent/: config.rs  context.rs  error.rs  loop_impl.rs  loop_v2.rs  message_preprocessor.rs  mod.rs  stream.rs  tool_parse.rs
crates/orchestrator/src/b212/: agents.rs  bridge_handlers.rs  governance.rs  mod.rs  persistent_bridge.rs  sim_executor.rs  workflow.rs
crates/orchestrator/src/backup/: mod.rs
crates/orchestrator/src/bridge/: command.rs  error.rs  events.rs  handle.rs  mod.rs  response.rs  runtime.rs  types.rs  ui_common.rs  ui_response.rs
crates/orchestrator/src/communication/: message.rs  mod.rs  receive.rs  (+1 more)
crates/orchestrator/tests/: bridge_integration.rs  daemon_integration.rs  daemon_ws_live.rs  draft_repository.rs  gateway_channels.rs  gateway_integration.rs  gateway_stub_inbound.rs  hardcore_concurrency.rs  hardcore_config.rs  hardcore_errors.rs  hardcore_graph.rs  hardcore_resilience.rs  hardcore_security.rs  integration_multi_agents_b212.rs  load_workspace_scale.rs  phase1_e2e.rs  phase2_agents_e2e.rs  phase2b_integration.rs  phase2b_turn.rs  phase3_b212_events.rs  phase3_b212_helpers.rs  phase3_b212_hitl_e2e.rs  phase3_b212_workflow.rs  phase4_agent_delete.rs  phase6_skills.rs  phase7_agent_loop.rs  provider_registry.rs  skills_hub.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: installer.rs  lib.rs  manifest.rs  registry.rs  updater.rs
crates/presentation-egui/: Cargo.toml
crates/presentation-egui/src/: lib.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: config.rs  events.rs  lib.rs  protocol.rs  protocol_version.rs
crates/shared-types/tests/: events.rs  protocol_compat.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
territoire-graphique/rust-gdextension/: Cargo.toml  territoire_gdextension.gdextension
territoire-graphique/rust-gdextension/src/: activity.rs  lib.rs  websocket.rs
(+489 files in other folders)
