[workspace]
resolver = "2"
members = [
    "crates/cortex",
    "crates/orchestrator",
    "crates/infrastructure",
    "crates/cli",
    "crates/hud",
]
default-members = [
    "crates/cortex",
    "crates/orchestrator",
    "crates/infrastructure",
    "crates/cli",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Sovën"]
license = "MIT OR Apache-2.0"
rust-version = "1.80"
description = "Orchestrateur — Second cerveau local souverain (Cortex + Esprit + Peau)"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
cortex = { path = "crates/cortex" }
orchestrator = { path = "crates/orchestrator" }
infrastructure = { path = "crates/infrastructure" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lancedb = "0.30"
arrow-array = "58"
arrow-schema = "58"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flume = "0.11"
egui = "0.30"
eframe = { version = "0.30", default-features = true }
ratatui = "0.29"
crossterm = "0.28"