[workspace]
resolver = "2"
members = [
    "crates/shared-types",
    "crates/orchestrator-core",
    "crates/cortex",
    "crates/orchestrator",
    "crates/infrastructure",
    "crates/mcp",
    "crates/cli",
    "crates/client",
    "apps/tauri-desktop/src-tauri",
    "plugins/pong-native",
    "territoire-graphique/rust-gdextension",
]

default-members = [
    "crates/cortex",
    "crates/orchestrator",
    "crates/infrastructure",
    "crates/mcp",
    "crates/cli",
    "crates/client",
]

[workspace.package]
version = "0.28.0"
edition = "2021"
authors = ["Sovën"]
license = "MIT OR Apache-2.0"
rust-version = "1.80"
description = "Orchestrateur — Second cerveau local souverain (Cortex + Esprit + Territoire Graphique)"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
shared-types = { path = "crates/shared-types" }
orchestrator-core = { path = "crates/orchestrator-core" }
cortex = { path = "crates/cortex" }
orchestrator = { path = "crates/orchestrator" }
orchestrator-client = { path = "crates/client" }
infrastructure = { path = "crates/infrastructure" }
mcp = { path = "crates/mcp" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "net", "sync"] }
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lancedb = "0.30"
arrow-array = "58"
arrow-schema = "58"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
crossterm = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flume = "0.11"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
tokio-tungstenite = "0.26"
ts-rs = { version = "12", features = ["serde-compat", "chrono-impl"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
libloading = "0.8"
notify = "7"