[package]
name = "b212"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "B212 — Framework liquidity-driven Stratos (protocole enfant Orchestrateur)"

[dependencies]
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"