[package]
name = "orchestrateur-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Orchestrateur — Binaire cœur (CLI + TUI optionnel) — Phase 5"

[features]
default = ["tui"]
tui = ["orchestrator/tui"]
http = ["dep:axum", "dep:tower", "dep:tower-http"]

[[bin]]
name = "orchestrateur"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cortex.workspace = true
infrastructure.workspace = true
orchestrator.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }