[package]
name = "orchestrateur-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Orchestrateur — Binaire CLI harness (orch) — headless"

[features]
default = ["gateway", "websocket-server"]
http = ["dep:axum", "dep:tower", "dep:tower-http"]
gateway = ["orchestrator/gateway", "dep:axum", "dep:tower", "dep:tower-http"]
websocket-server = ["orchestrator/websocket-server", "dep:axum", "dep:tower", "dep:tower-http"]

[[bin]]
name = "orch"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
crossterm.workspace = true
cortex.workspace = true
infrastructure.workspace = true
mcp = { workspace = true }
orchestrator = { workspace = true, features = ["gateway", "websocket-server", "plugins-native", "skills-marketplace"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "process", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
uuid = { workspace = true, features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }