[package]
name = "cortex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cortex — squelette hexagonal de l'Orchestrateur (mémoires, graphe, ports)"
keywords = ["orchestrateur", "cortex", "knowledge-graph", "hexagonal"]
categories = ["data-structures", "parsing"]

[features]
default = []
heavy-tests = []

[[test]]
name = "heavy_adversarial"
path = "tests/heavy_adversarial.rs"
required-features = ["heavy-tests"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest = "1"
serde_json.workspace = true
tokio.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "warn"