[package]
name = "orchestrateur-hud"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Orchestrateur — HUD egui (Peau optionnelle) — Phase 4"
publish = false

[[bin]]
name = "orchestrateur-hud"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
eframe.workspace = true
egui.workspace = true
infrastructure.workspace = true
flume.workspace = true
orchestrator.workspace = true
orchestrator-client.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
cortex.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "warn"