[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Orchestrateur — Adapters (FS, LanceDB, Ollama, Grok)"

[dependencies]
async-trait.workspace = true
cortex.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "warn"