[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Orchestrateur — Adapters (FS, LanceDB, Ollama, Grok)"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
cortex.workspace = true
futures.workspace = true
lancedb.workspace = true
orchestrator.workspace = true
mcp = { workspace = true }
reqwest.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "warn"