[package]
name = "mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Client MCP JSON-RPC (stdio) — Phase 9 Orchestrateur"

[dependencies]
async-trait.workspace = true
orchestrator.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "warn"