[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cœur applicatif de l'Orchestrateur (facade, bridge, use cases, sécurité)"

[features]
default = []
heavy-tests = []
cli = []
tui = ["dep:ratatui", "dep:crossterm"]
http = ["dep:axum", "dep:tower-http"]
gateway = ["dep:axum", "dep:tower-http", "dep:futures-util", "dep:reqwest"]
plugins-native = ["dep:libloading"]
skills-marketplace = ["dep:reqwest"]

[dependencies]
async-trait.workspace = true
blake3.workspace = true
chrono.workspace = true
cortex.workspace = true
flume.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "net", "process", "io-util"] }
toml.workspace = true
tracing.workspace = true
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }

[dev-dependencies]
infrastructure = { workspace = true }
reqwest = { workspace = true }
serde_json = "1"
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "gateway_integration"
required-features = ["gateway"]

[[test]]
name = "gateway_stub_inbound"
required-features = ["gateway"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "warn"