[package]
name = "presentation-egui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Orchestrateur — Peau egui (HUD optionnel) — Phase 6"
publish = false

[dependencies]
orchestrator.workspace = true

# egui ajouté en Phase 6 — build sélectif :
# cargo build -p presentation-egui