[package]
name = "orchestrateur-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Interface terminal (ratatui) pour Orchestrateur — v0.6.0"
publish = false

[[bin]]
name = "orchestrateur-tui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
infrastructure.workspace = true
orchestrator = { workspace = true, features = ["tui"] }
orchestrator-client = { path = "../client" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints.rust]
unsafe_code = "forbid"