[package]
name = "territoire-gdextension"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GDExtension Rust pour Territoire Graphique (Phase 15+)"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints.rust]
unsafe_code = "forbid"