[package]
name = "orchestrateur-desktop"
version = "0.27.0"
description = "Orchestrateur v2 — Desktop Tauri (Territoire Graphique)"
authors = ["Sovën"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "orchestrateur_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
orchestrator = { workspace = true, features = ["gateway"] }
shared-types.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
uuid = { workspace = true, features = ["v4"] }

[lints.rust]
unsafe_code = "forbid"
